dex/loginapp/loginapp.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loginapp
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loginapp
    spec:
      containers:
      - image: quay.io/fydrah/loginapp:2.7.0
        args:
        - serve
        - /app/config.yaml
        name: loginapp
        volumeMounts:
        - name: ca
          mountPath: /etc/ssl/
        - name: config
          mountPath: /app/
      volumes:
      - name: ca
        configMap:
          name: 5ik8s.com-ca
          items:
          - key: ca.crt
            path: ca.crt
      - name: config
        configMap:
          name: loginapp
          items:
          - key: config.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loginapp
  namespace: kube-system
spec:
  ports:
  - name: loginapp
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: loginapp

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loginapp-ingress
  namespace: kube-system
spec:
  tls:
   - secretName: 5ik8s.com
  rules:
  - host: loginapp.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: loginapp
          servicePort: 5555
